--- a/app.css
+++ b/app.css
@@ -32,6 +32,10 @@ body {
     padding-bottom: 10vh;
 }
 
+.nav-item {
+    margin-right: 10px;
+}
+
 /* ****************************** */
 /* Forms */
 /* ****************************** */
@@ -268,6 +272,9 @@ input[type=checkbox] {
 }
 
 
+/* ****************************** */
+/* Grid */
+/* ****************************** */
 .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
