--- a/app.css
+++ b/app.css
@@ -201,6 +201,12 @@ a:active {
     border-top-right-radius: 20px !important;
 }
 
+.card:hover {
+    border-width: 2px;
+    border-color: white;
+    border-style: solid;
+}
+
 /* ****************************** */
 /* Text */
 /* ****************************** */
