--- a/app.css
+++ b/app.css
@@ -305,3 +305,27 @@ input[type=checkbox] {
     width: 100%;
     height: auto;
   }
+
+
+/* ****************************** */
+/* Images */
+/* ****************************** */
+.img-wrapper {
+    position: relative;
+    width: 100%;
+    font-size: 0;
+    color: #fff;
+}
+.img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000073;
+}
+
+.img-wrapper img {
+    width: 100%;
+    height: auto;
+}
